[package]
name = "gles-native"
version = "0.1.0"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
metal = ["gfx-backend-metal"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
env_logger = "0.6.0"
lazy_static = "1.1.0"
log = "0.4"
libc = "0.2"
parking_lot = { version = "0.6"}
gfx-hal = { git = "https://github.com/gfx-rs/gfx" } # required by gfx-memory
gfx-backend-empty = { git = "https://github.com/gfx-rs/gfx" }

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
git = "https://github.com/gfx-rs/gfx"
version = "0.1"
optional = true

[target.'cfg(target_os = "android")'.dependencies.gfx-backend-vulkan]
git = "https://github.com/gfx-rs/gfx"
version = "0.1"
optional = true

#[target.'cfg(target_os = "windows")'.dependencies.gfx-backend-dx12]
#git = "https://github.com/gfx-rs/gfx"
#version = "0.1"
#optional = true
